feat(condo): DOMA-11237 added warehouse and commercial unit types to parking

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -362,8 +362,8 @@
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_PROPERTY_PROVIDED": "Todos los id de comunidades transmitidos (billingProperty) en scopes deben pertenecer a la organización del contexto de facturación transmitido",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Es necesario transmitir el periodo no antes del inicio del último mes y no después del inicio del mes en curso, el formato válido es AAAA-MM-FF",
   "api.billing.sendNewReceiptMessagesToResidentScopes.SCOPES_IS_EMPTY": "Hay que transmitir al menos un elemento a scopes",
-  "api.common.INVALID_PHONE_NUMBER_FORMAT": "El formato del número de teléfono no es válido",
   "api.common.INVALID_EMAIL_FORMAT": "El formato del E-mail no es válido",
+  "api.common.INVALID_PHONE_NUMBER_FORMAT": "El formato del número de teléfono no es válido",
   "api.common.WRONG_PERCENT_VALUE": "Valor porcentual incorrecto",
   "api.common.WRONG_PHONE_FORMAT": "Formato del número de teléfono incorrecto",
   "api.contact.contact.CONTACT_DUPLICATE_ERROR": "Un contacto con este número de teléfono ya está registrado en esta propiedad",
@@ -1769,16 +1769,16 @@
   "pages.billing.ReceiptsTable.loadRegistry.button": "Cargar registro",
   "pages.billing.Status.success.title": "Pagos de personas físicas conectados",
   "pages.billing.registry.uploadPage.title": "Carga del registro",
-  "pages.clientCard.lastTicketsLoaded": "Se cargaron los últimos {count} tickets.",
-  "pages.clientCard.openAllTickets": "Ver todos los tickets",
-  "pages.clientCard.table.tabs.contactPropertyTickets": "Solicitud de entradas para esta dirección",
-  "pages.clientCard.table.tabs.residentsEntranceTickets": "Solicitud de entradas para la entrada",
-  "pages.clientCard.table.tabs.residentsPropertyTickets": "Solicitud de entradas para el edificio",
   "pages.clientCard.Title": "Número de teléfono {phone}",
   "pages.clientCard.addAddress": "Añadir dirección",
   "pages.clientCard.callRecordsLog": "Historia de llamadas",
   "pages.clientCard.editContact": "Editar contacto",
+  "pages.clientCard.lastTicketsLoaded": "Se cargaron los últimos {count} tickets.",
+  "pages.clientCard.openAllTickets": "Ver todos los tickets",
   "pages.clientCard.showAllPropertyTickets": "Todas incidencias de esta comunidad",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Solicitud de entradas para esta dirección",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Solicitud de entradas para la entrada",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Solicitud de entradas para el edificio",
   "pages.condo.analytics.TicketAnalyticsPage.AllAddresses": "a todas las direcciones",
   "pages.condo.analytics.TicketAnalyticsPage.AllCategories": "en todas las categorías",
   "pages.condo.analytics.TicketAnalyticsPage.DefaultTickets": "Incidencias regulares de",
@@ -2389,7 +2389,9 @@
   "pages.condo.property.modal.RenameNextUnits": "Cambiar números de propiedades siguientes",
   "pages.condo.property.modal.UnitType": "Tipo de propiedad",
   "pages.condo.property.modal.title.addParking": "Añadir aparcamiento",
+  "pages.condo.property.modal.title.addParkingFloor": "Agregar piso de estacionamiento",
   "pages.condo.property.modal.title.addParkingUnit": "Añadir plaza de coche",
+  "pages.condo.property.modal.title.addParkingUnitRoom": "Agregar unidad",
   "pages.condo.property.modal.title.addSection": "Añadir portal",
   "pages.condo.property.modal.title.addSectionFloor": "Añadir planta",
   "pages.condo.property.modal.title.addUnit": "Añadir unidad",
@@ -2438,8 +2440,8 @@
   "pages.condo.property.section.form.numberOfSection": "Número de portal",
   "pages.condo.property.section.form.unitsOnFloor": "Propiedades en piso",
   "pages.condo.property.select.option.floor": "Planta",
-  "pages.condo.property.select.option.interfloorroom": "Unidad entre plantas",
   "pages.condo.property.select.option.parking": "Aparcamiento",
+  "pages.condo.property.select.option.parking.unit": "Unidades de estacionamiento",
   "pages.condo.property.select.option.parkingFloor": "Planta de aparcamiento",
   "pages.condo.property.select.option.parkingPlace": "Plaza de coche",
   "pages.condo.property.select.option.residentialBuilding": "Unidad residencial",
@@ -2793,11 +2795,11 @@
   "pages.news.create.preview.app.validUntil": "válido hasta {validBefore}",
   "pages.news.create.selectSharingApp": "Seleccionar aplicaciones para compartir",
   "pages.news.create.selectSharingApp.appDescription": "Publica sus noticias en {appName}",
+  "pages.news.create.selectSharingApp.finishSetting.actionButtonText": "Configuración completa",
+  "pages.news.create.selectSharingApp.finishSetting.description": "Configuración completa para enviar noticias a ",
   "pages.news.create.selectSharingApp.otherApps": "Otras aplicaciones",
   "pages.news.create.selectSharingApp.otherApps.actionButtonText": "Configurar",
   "pages.news.create.selectSharingApp.otherApps.description": "Configurar publicación de noticias",
-  "pages.news.create.selectSharingApp.finishSetting.actionButtonText": "Configuración completa",
-  "pages.news.create.selectSharingApp.finishSetting.description": "Configuración completa para enviar noticias a ",
   "pages.news.newsItemCard.author": "autor {createdBy}{isOwner, plural, other {} one { (tú)}}",
   "pages.news.newsItemCard.field.body": "Texto",
   "pages.news.newsItemCard.field.sendAt": "Fecha de envío",
