--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -362,8 +362,8 @@
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_PROPERTY_PROVIDED": "Все переданные id домов (billingProperty) в скоупах должны принадлежать организации из переданного биллингового контекста",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Необходимо передать период не ранее начала прошлого месяца и не позднее начала текущего месяца, валидный формат - YYYY-MM-DD",
   "api.billing.sendNewReceiptMessagesToResidentScopes.SCOPES_IS_EMPTY": "Необходимо передать хотя бы один элемент в scopes",
-  "api.common.INVALID_PHONE_NUMBER_FORMAT": "Некорректный формат номера телефона",
   "api.common.INVALID_EMAIL_FORMAT": "Некорректный формат E-mail",
+  "api.common.INVALID_PHONE_NUMBER_FORMAT": "Некорректный формат номера телефона",
   "api.common.WRONG_PERCENT_VALUE": "Некорректное значение процента",
   "api.common.WRONG_PHONE_FORMAT": "Неверный формат номера телефона",
   "api.contact.contact.CONTACT_DUPLICATE_ERROR": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
@@ -1769,16 +1769,16 @@
   "pages.billing.ReceiptsTable.loadRegistry.button": "Загрузить реестр",
   "pages.billing.Status.success.title": "Платежи от физлиц подключены",
   "pages.billing.registry.uploadPage.title": "Загрузка нового реестра",
-  "pages.clientCard.lastTicketsLoaded": "Загружены последние {count} заявок.",
-  "pages.clientCard.openAllTickets": "Открыть все заявки",
-  "pages.clientCard.table.tabs.contactPropertyTickets": "Заявки контакта по адресу",
-  "pages.clientCard.table.tabs.residentsEntranceTickets": "Заявки жителей по подъезду",
-  "pages.clientCard.table.tabs.residentsPropertyTickets": "Заявки жителей по дому",
   "pages.clientCard.Title": "Контакт {phone}",
   "pages.clientCard.addAddress": "Добавить адрес",
   "pages.clientCard.callRecordsLog": "История звонков",
   "pages.clientCard.editContact": "Редактировать контакт",
+  "pages.clientCard.lastTicketsLoaded": "Загружены последние {count} заявок.",
+  "pages.clientCard.openAllTickets": "Открыть все заявки",
   "pages.clientCard.showAllPropertyTickets": "Все заявки по этому адресу",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Заявки контакта по адресу",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Заявки жителей по подъезду",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Заявки жителей по дому",
   "pages.condo.analytics.TicketAnalyticsPage.AllAddresses": "по всем адресам",
   "pages.condo.analytics.TicketAnalyticsPage.AllCategories": "во всех категориях",
   "pages.condo.analytics.TicketAnalyticsPage.DefaultTickets": "Обычные заявки за",
@@ -2384,12 +2384,14 @@
   "pages.condo.property.map.modal.totalContacts": "Зарегистрировано жителей",
   "pages.condo.property.menu.MenuPlaceholder": "Добавить элемент",
   "pages.condo.property.modal.RenameNextParking": "Изменить номера следующих паркингов",
-  "pages.condo.property.modal.RenameNextParkingUnits": "Изменить номера следующих машиномест",
+  "pages.condo.property.modal.RenameNextParkingUnits": "Изменить номера следующих помещений",
   "pages.condo.property.modal.RenameNextSections": "Изменить номера следующих подъездов",
   "pages.condo.property.modal.RenameNextUnits": "Изменить номера следующих помещений",
   "pages.condo.property.modal.UnitType": "Тип помещения",
   "pages.condo.property.modal.title.addParking": "Добавить паркинг",
+  "pages.condo.property.modal.title.addParkingFloor": "Добавить этаж паркинга",
   "pages.condo.property.modal.title.addParkingUnit": "Добавить машиноместо",
+  "pages.condo.property.modal.title.addParkingUnitRoom": "Добавить помещение",
   "pages.condo.property.modal.title.addSection": "Добавить подъезд",
   "pages.condo.property.modal.title.addSectionFloor": "Добавить этаж",
   "pages.condo.property.modal.title.addUnit": "Добавить помещение",
@@ -2438,13 +2440,13 @@
   "pages.condo.property.section.form.numberOfSection": "Номер подъезда",
   "pages.condo.property.section.form.unitsOnFloor": "Помещений на этаже",
   "pages.condo.property.select.option.floor": "Этаж",
-  "pages.condo.property.select.option.interfloorroom": "Межэтажное помещение",
   "pages.condo.property.select.option.parking": "Паркинг",
+  "pages.condo.property.select.option.parking.unit": "Помещения паркинга",
   "pages.condo.property.select.option.parkingFloor": "Этаж паркинга",
   "pages.condo.property.select.option.parkingPlace": "Машиноместо",
   "pages.condo.property.select.option.residentialBuilding": "Жилой дом",
   "pages.condo.property.select.option.section": "Подъезд",
-  "pages.condo.property.select.option.unit": "Помещение",
+  "pages.condo.property.select.option.unit": "Помещения дома",
   "pages.condo.property.type.building": "Многоквартирный дом",
   "pages.condo.property.type.village": "Коттеджный поселок",
   "pages.condo.property.unit.Name": "Название",
@@ -2793,11 +2795,11 @@
   "pages.news.create.preview.app.validUntil": "актуально до {validBefore}",
   "pages.news.create.selectSharingApp": "Выберите, куда отправить новость",
   "pages.news.create.selectSharingApp.appDescription": "Новость появится в приложении {appName}",
+  "pages.news.create.selectSharingApp.finishSetting.actionButtonText": "Завершить настройку",
+  "pages.news.create.selectSharingApp.finishSetting.description": "Завершите настройку, чтобы отправлять новости в ",
   "pages.news.create.selectSharingApp.otherApps": "Другие каналы",
   "pages.news.create.selectSharingApp.otherApps.actionButtonText": "Настроить",
   "pages.news.create.selectSharingApp.otherApps.description": "Настройте отправку новостей в другие приложения",
-  "pages.news.create.selectSharingApp.finishSetting.actionButtonText": "Завершить настройку",
-  "pages.news.create.selectSharingApp.finishSetting.description": "Завершите настройку, чтобы отправлять новости в ",
   "pages.news.newsItemCard.author": "автор {createdBy}{isOwner, plural, other {} one { (вы)}}",
   "pages.news.newsItemCard.field.body": "Текст",
   "pages.news.newsItemCard.field.sendAt": "Дата отправки",
