--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -362,8 +362,8 @@
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_BILLING_PROPERTY_PROVIDED": "All provided billing properties in scopes should be non-deleted & connected to organization of the billing context",
   "api.billing.sendNewReceiptMessagesToResidentScopes.INVALID_PERIOD_PROVIDED": "Please provide proper period not before start of previous and not later than start of current month, valid format is YYYY-MM-DD",
   "api.billing.sendNewReceiptMessagesToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
-  "api.common.INVALID_PHONE_NUMBER_FORMAT": "Invalid phone number format",
   "api.common.INVALID_EMAIL_FORMAT": "Invalid E-mail format",
+  "api.common.INVALID_PHONE_NUMBER_FORMAT": "Invalid phone number format",
   "api.common.WRONG_PERCENT_VALUE": "Invalid percent value",
   "api.common.WRONG_PHONE_FORMAT": "Wrong phone number format",
   "api.contact.contact.CONTACT_DUPLICATE_ERROR": "Contact with this phone number is already registered in this room",
@@ -1769,16 +1769,16 @@
   "pages.billing.ReceiptsTable.loadRegistry.button": "Load registry",
   "pages.billing.Status.success.title": "Payments from individuals are enabled",
   "pages.billing.registry.uploadPage.title": "Registry upload",
-  "pages.clientCard.lastTicketsLoaded": "Last {count} tickets loaded.",
-  "pages.clientCard.openAllTickets": "View all tickets",
-  "pages.clientCard.table.tabs.contactPropertyTickets": "Tickets requests for address",
-  "pages.clientCard.table.tabs.residentsEntranceTickets": "Tickets requests for the entrance",
-  "pages.clientCard.table.tabs.residentsPropertyTickets": "Tickets requests for the building",
   "pages.clientCard.Title": "Contact {phone}",
   "pages.clientCard.addAddress": "Add address",
   "pages.clientCard.callRecordsLog": "Call records log",
   "pages.clientCard.editContact": "Edit contact",
+  "pages.clientCard.lastTicketsLoaded": "Last {count} tickets loaded.",
+  "pages.clientCard.openAllTickets": "View all tickets",
   "pages.clientCard.showAllPropertyTickets": "Show all tickets at this property",
+  "pages.clientCard.table.tabs.contactPropertyTickets": "Tickets requests for address",
+  "pages.clientCard.table.tabs.residentsEntranceTickets": "Tickets requests for the entrance",
+  "pages.clientCard.table.tabs.residentsPropertyTickets": "Tickets requests for the building",
   "pages.condo.analytics.TicketAnalyticsPage.AllAddresses": "for all addresses",
   "pages.condo.analytics.TicketAnalyticsPage.AllCategories": "by every category",
   "pages.condo.analytics.TicketAnalyticsPage.DefaultTickets": "Default tickets for",
@@ -2384,12 +2384,14 @@
   "pages.condo.property.map.modal.totalContacts": "Registered residents",
   "pages.condo.property.menu.MenuPlaceholder": "Add element",
   "pages.condo.property.modal.RenameNextParking": "Rename the following parking in order",
-  "pages.condo.property.modal.RenameNextParkingUnits": "Rename the following parking unit in order",
+  "pages.condo.property.modal.RenameNextParkingUnits": "Rename the following units in order",
   "pages.condo.property.modal.RenameNextSections": "Rename the following sections in order",
   "pages.condo.property.modal.RenameNextUnits": "Rename the following unit in order",
   "pages.condo.property.modal.UnitType": "Unit type",
   "pages.condo.property.modal.title.addParking": "Add parking",
+  "pages.condo.property.modal.title.addParkingFloor": "Add parking floor",
   "pages.condo.property.modal.title.addParkingUnit": "Add parking place",
+  "pages.condo.property.modal.title.addParkingUnitRoom": "Add unit",
   "pages.condo.property.modal.title.addSection": "Add section",
   "pages.condo.property.modal.title.addSectionFloor": "Add floor",
   "pages.condo.property.modal.title.addUnit": "Add unit",
@@ -2438,13 +2440,13 @@
   "pages.condo.property.section.form.numberOfSection": "Number of section",
   "pages.condo.property.section.form.unitsOnFloor": "Units on floor",
   "pages.condo.property.select.option.floor": "Floor",
-  "pages.condo.property.select.option.interfloorroom": "Interfloor room",
   "pages.condo.property.select.option.parking": "Parking",
+  "pages.condo.property.select.option.parking.unit": "Parking Units",
   "pages.condo.property.select.option.parkingFloor": "Parking floor",
   "pages.condo.property.select.option.parkingPlace": "Parking place",
   "pages.condo.property.select.option.residentialBuilding": "Residential Building",
   "pages.condo.property.select.option.section": "Section",
-  "pages.condo.property.select.option.unit": "Unit",
+  "pages.condo.property.select.option.unit": "Property units",
   "pages.condo.property.type.building": "Building",
   "pages.condo.property.type.village": "Village",
   "pages.condo.property.unit.Name": "Name",
@@ -2793,11 +2795,11 @@
   "pages.news.create.preview.app.validUntil": "valid until {validBefore}",
   "pages.news.create.selectSharingApp": "Select sharing apps",
   "pages.news.create.selectSharingApp.appDescription": "Cross post your news to {appName}",
+  "pages.news.create.selectSharingApp.finishSetting.actionButtonText": "Complete setting",
+  "pages.news.create.selectSharingApp.finishSetting.description": "Complete setting to send news to ",
   "pages.news.create.selectSharingApp.otherApps": "Other apps",
   "pages.news.create.selectSharingApp.otherApps.actionButtonText": "Setup",
   "pages.news.create.selectSharingApp.otherApps.description": "Setup news cross posting",
-  "pages.news.create.selectSharingApp.finishSetting.actionButtonText": "Complete setting",
-  "pages.news.create.selectSharingApp.finishSetting.description": "Complete setting to send news to ",
   "pages.news.newsItemCard.author": "author {createdBy}{isOwner, plural, other {} one { (you)}}",
   "pages.news.newsItemCard.field.body": "Text",
   "pages.news.newsItemCard.field.sendAt": "Sent date",
