refactor(condo): DOMA-11237 rename addParkingUnitRoom to addParkingFacilityUnit

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2391,7 +2391,7 @@
   "pages.condo.property.modal.title.addParking": "Añadir aparcamiento",
   "pages.condo.property.modal.title.addParkingFloor": "Agregar piso de estacionamiento",
   "pages.condo.property.modal.title.addParkingUnit": "Añadir plaza de coche",
-  "pages.condo.property.modal.title.addParkingUnitRoom": "Agregar unidad",
+  "pages.condo.property.modal.title.addParkingFacilityUnit": "Agregar unidad",
   "pages.condo.property.modal.title.addSection": "Añadir portal",
   "pages.condo.property.modal.title.addSectionFloor": "Añadir planta",
   "pages.condo.property.modal.title.addUnit": "Añadir unidad",
