refactor(condo): DOMA-11237 remove ParkingUnitForm

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2389,13 +2389,14 @@
   "pages.condo.property.modal.RenameNextUnits": "Cambiar números de propiedades siguientes",
   "pages.condo.property.modal.UnitType": "Tipo de propiedad",
   "pages.condo.property.modal.title.addParking": "Añadir aparcamiento",
+  "pages.condo.property.modal.title.addParkingFacilityUnit": "Agregar unidad",
   "pages.condo.property.modal.title.addParkingFloor": "Agregar piso de estacionamiento",
   "pages.condo.property.modal.title.addParkingUnit": "Añadir plaza de coche",
-  "pages.condo.property.modal.title.addParkingFacilityUnit": "Agregar unidad",
   "pages.condo.property.modal.title.addSection": "Añadir portal",
   "pages.condo.property.modal.title.addSectionFloor": "Añadir planta",
   "pages.condo.property.modal.title.addUnit": "Añadir unidad",
   "pages.condo.property.modal.title.editParking": "Editar aparcamiento",
+  "pages.condo.property.modal.title.editParkingFacilityUnit": "Editar unidad de estacionamiento",
   "pages.condo.property.modal.title.editParkingUnit": "Editar plaza de coche",
   "pages.condo.property.modal.title.editSection": "Editar portal",
   "pages.condo.property.modal.title.editUnit": "Editar unidad",
