feat(condo): DOMA-11580 update contact/[id] page

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1837,6 +1837,7 @@
   "pages.condo.contact.ImportTitle": "contacts",
   "pages.condo.contact.PageTitle": "Contacts",
   "pages.condo.contact.Verified": "Verified",
+  "pages.condo.contact.HasResident": "Приложение жителя",
   "pages.condo.e-voting.id.PageTitle": "Online voting",
   "pages.condo.e-voting.index.CreateEVotingButtonLabel": "Create online voting",
   "pages.condo.e-voting.index.CreateEVotingModalTitle": "Create online voting",
