feat(condo): DOMA-11667 update /contact page

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1835,7 +1835,7 @@
   "pages.condo.analytics.residentsPercent.title": "Доля активных пользователей",
   "pages.condo.buildings.PageTitle": "Объекты",
   "pages.condo.contact.ImportTitle": "жителей",
-  "pages.condo.contact.PageTitle": "Контакты жителей",
+  "pages.condo.contact.PageTitle": "Жители",
   "pages.condo.contact.Verified": "Верифицирован",
   "pages.condo.e-voting.id.PageTitle": "Онлайн собрание",
   "pages.condo.e-voting.index.CreateEVotingButtonLabel": "Создать новое собрание",
